--- a/demoblaze-performance-tests/jmeter-jira-pipeline/Jenkinsfile
+++ b/demoblaze-performance-tests/jmeter-jira-pipeline/Jenkinsfile
@@ -2,10 +2,10 @@ pipeline {
     agent any
 
     environment {
-        JMETER_BIN   = 'C:\\\\Users\\\\Admin\\\\Desktop\\\\Tools\\\\JMeter\\\\apache-jmeter-5.6.3\\\\apache-jmeter-5.6.3\\\\bin\\\\jmeter.bat'
-        JMX_FILE     = 'jmeter-jira-pipeline\\\\Demoblaze_Jenkins_Pipeline.jmx'
+        JMETER_BIN   = 'C:\\Users\\Admin\\Desktop\\Tools\\JMeter\\apache-jmeter-5.6.3\\apache-jmeter-5.6.3\\bin\\jmeter.bat'
+        JMX_FILE     = 'jmeter-jira-pipeline\\Demoblaze_Jenkins_Pipeline.jmx'
         RESULTS_DIR  = 'results'
-        RESULTS_FILE = "${RESULTS_DIR}\\\\results.jtl"
+        RESULTS_FILE = 'results\\results.jtl'
         REPORT_DIR   = 'html-report'
         JIRA_URL     = 'https://meeraraju2711.atlassian.net'
         JIRA_EMAIL   = 'meeraraju2711@gmail.com'
@@ -23,11 +23,11 @@ pipeline {
 
         stage('Run JMeter Stress Test') {
             steps {
-                bat '''
-                    if not exist "${RESULTS_DIR}" mkdir "${RESULTS_DIR}"
-                    if exist "${REPORT_DIR}" rmdir /s /q "${REPORT_DIR}"
-                    cmd /c "${JMETER_BIN}" -n -t "${JMX_FILE}" -l "${RESULTS_FILE}" -e -o "${REPORT_DIR}"
-                '''
+                bat """
+                    if not exist results mkdir results
+                    if exist html-report rmdir /s /q html-report
+                    call "%JMETER_BIN%" -n -t "jmeter-jira-pipeline\\Demoblaze_Jenkins_Pipeline.jmx" -l "results\\results.jtl" -e -o "html-report"
+                """
             }
         }
 
@@ -37,7 +37,7 @@ pipeline {
                     allowMissing         : false,
                     alwaysLinkToLastBuild: true,
                     keepAll              : true,
-                    reportDir            : "${REPORT_DIR}",
+                    reportDir            : 'html-report',
                     reportFiles          : 'index.html',
                     reportName           : 'JMeter Stress Test Report'
                 ])
@@ -48,7 +48,7 @@ pipeline {
             steps {
                 script {
                     def failCount = bat(
-                        script: "@findstr /c:\"false,\" \"${RESULTS_FILE}\"",
+                        script: '@findstr /c:"false," "results\\results.jtl"',
                         returnStdout: true
                     ).trim().readLines().size()
 
@@ -60,9 +60,9 @@ pipeline {
                             bat """
                                 curl -s -X POST ^
                                 -H "Content-Type: application/json" ^
-                                -u "${JIRA_EMAIL}:${JIRA_TOKEN}" ^
-                                --data "{\"fields\":{\"project\":{\"key\":\"${JIRA_PROJECT}\"},\"summary\":\"Jenkins - Stress Test Failed (${failCount} samples)\",\"description\":\"Automated failure detected by Jenkins.\\\\n\\\\nFailed Samples: ${failCount}\\\\nBuild Number: %BUILD_NUMBER%\\\\nBuild URL: %BUILD_URL%\",\"issuetype\":{\"name\":\"Bug\"}}}" ^
-                                ${JIRA_URL}/rest/api/2/issue
+                                -u "%JIRA_EMAIL%:%JIRA_TOKEN%" ^
+                                --data "{\"fields\":{\"project\":{\"key\":\"%JIRA_PROJECT%\"},\"summary\":\"Jenkins - Stress Test Failed (%failCount% samples)\",\"description\":\"Automated failure detected by Jenkins.\\\\nFailed Samples: %failCount%\\\\nBuild: %BUILD_NUMBER%\\\\nURL: %BUILD_URL%\",\"issuetype\":{\"name\":\"Bug\"}}}" ^
+                                %JIRA_URL%/rest/api/2/issue
                             """
                         }
                     } else {
