--- a/jmeter-jira-pipeline/Jenkinsfile
+++ b/jmeter-jira-pipeline/Jenkinsfile
@@ -22,10 +22,6 @@ pipeline {
                         mkdir results
                         mkdir html-report
                         
-                        REM DEBUG: Verify workspace and files
-                        echo Workspace: ${ws}
-                        dir "${ws}\\jmeter-jira-pipeline"
-                        
                         REM Run JMeter with EXACT PATH - no cd needed
                         "C:\\Users\\Admin\\Desktop\\Tools\\JMeter\\apache-jmeter-5.6.3\\apache-jmeter-5.6.3\\bin\\jmeter.bat" -n ^
                             -t "${ws}\\jmeter-jira-pipeline\\Demoblaze_Jenkins_Pipeline.jmx" ^
@@ -53,28 +49,21 @@ pipeline {
             steps {
                 script {
                     def resultsFile = 'results/results.jtl'
-                    
                     if (fileExists(resultsFile)) {
                         def content = readFile(resultsFile)
                         def failCount = (content =~ /(?s).*?false,.*?/).size()
-                        
                         echo "Failed requests: ${failCount}"
                         
                         if (failCount > 0) {
                             echo "Creating Jira ticket..."
                             withCredentials([string(credentialsId: 'JIRA_API_TOKEN', variable: 'JIRA_TOKEN')]) {
-                                def response = bat(
-                                    script: """
-                                        curl -s -X POST ^
-                                        -H "Content-Type: application/json" ^
-                                        -u "meeraraju2711@gmail.com:%JIRA_TOKEN%" ^
-                                        -d "{\"fields\":{\"project\":{\"key\":\"KAN\"},\"summary\":\"Demoblaze Perf FAIL - %failCount% errors\",\"description\":\"Build %BUILD_NUMBER%: 33%% failure rate.\\n%BUILD_URL%\",\"issuetype\":{\"name\":\"Bug\"}}}" ^
-                                        https://meeraraju2711.atlassian.net/rest/api/2/issue
-                                    """,
-                                    returnStdout: true
-                                ).trim()
-                                
-                                echo "Jira response: ${response}"
+                                bat """
+                                    curl -s -X POST ^
+                                    -H "Content-Type: application/json" ^
+                                    -u "meeraraju2711@gmail.com:%JIRA_TOKEN%" ^
+                                    -d "{\"fields\":{\"project\":{\"key\":\"KAN\"},\"summary\":\"Demoblaze Perf FAIL - ${failCount} errors\",\"description\":\"Build ${BUILD_NUMBER}: 33%\\\\% failure rate. ${BUILD_URL}\",\"issuetype\":{\"name\":\"Bug\"}}}" ^
+                                    "https://meeraraju2711.atlassian.net/rest/api/2/issue"
+                                """
                             }
                         } else {
                             echo "All tests passed!"
@@ -88,21 +77,7 @@ pipeline {
     post {
         always {
             archiveArtifacts artifacts: 'results/**, html-report/**', allowEmptyArchive: true
-            echo "Build ${BUILD_NUMBER} complete - check report above!"
-        }
-        success {
-            emailext (
-                subject: "Demoblaze Perf SUCCESS #${BUILD_NUMBER}",
-                body: "All tests passed! ${BUILD_URL}html-report/",
-                to: "meeraraju2711@gmail.com"
-            )
-        }
-        failure {
-            emailext (
-                subject: "Demoblaze Perf FAILED #${BUILD_NUMBER}",
-                body: "Check results: ${BUILD_URL}",
-                to: "meeraraju2711@gmail.com"
-            )
+            echo "Build ${BUILD_NUMBER} complete - check HTML report!"
         }
     }
 }
