--- a/jmeter-jira-pipeline/Jenkinsfile
+++ b/jmeter-jira-pipeline/Jenkinsfile
@@ -14,19 +14,18 @@ pipeline {
                 script {
                     def ws = env.WORKSPACE
                     bat """
-                        REM FULL CLEAN - remove stale results/HTML
+                        REM FULL CLEAN
                         if exist results rmdir /s /q results
                         if exist html-report rmdir /s /q html-report
                         
-                        REM Create fresh directories
                         mkdir results
                         mkdir html-report
                         
-                        REM Run JMeter with EXACT PATH - no cd needed
-                        "C:\\Users\\Admin\\Desktop\\Tools\\JMeter\\apache-jmeter-5.6.3\\apache-jmeter-5.6.3\\bin\\jmeter.bat" -n ^
-                            -t "${ws}\\jmeter-jira-pipeline\\Demoblaze_Jenkins_Pipeline.jmx" ^
-                            -l "${ws}\\results\\results.jtl" ^
-                            -e -o "${ws}\\html-report"
+                        REM Run JMeter
+                        "C:\\\\Users\\\\Admin\\\\Desktop\\\\Tools\\\\JMeter\\\\apache-jmeter-5.6.3\\\\apache-jmeter-5.6.3\\\\bin\\\\jmeter.bat" -n ^
+                            -t "${ws}\\\\jmeter-jira-pipeline\\\\Demoblaze_Jenkins_Pipeline.jmx" ^
+                            -l "${ws}\\\\results\\\\results.jtl" ^
+                            -e -o "${ws}\\\\html-report"
                     """
                 }
             }
@@ -61,12 +60,12 @@ pipeline {
                                     curl -s -X POST ^
                                     -H "Content-Type: application/json" ^
                                     -u "meeraraju2711@gmail.com:%JIRA_TOKEN%" ^
-                                    -d "{\"fields\":{\"project\":{\"key\":\"KAN\"},\"summary\":\"Demoblaze Perf FAIL - ${failCount} errors\",\"description\":\"Build ${BUILD_NUMBER}: 33%\\\\% failure rate. ${BUILD_URL}\",\"issuetype\":{\"name\":\"Bug\"}}}" ^
+                                    -d "{ \\"fields\\": { \\"project\\": { \\"key\\": \\"KAN\\" }, \\"summary\\": \\"Demoblaze Perf FAIL - ${failCount} errors\\", \\"description\\": \\"Build %BUILD_NUMBER%: 33%% failure rate. %BUILD_URL%\\", \\"issuetype\\": { \\"name\\": \\"Bug\\" } } }" ^
                                     "https://meeraraju2711.atlassian.net/rest/api/2/issue"
                                 """
                             }
                         } else {
-                            echo "All tests passed!"
+                            echo "All tests passed - no Jira ticket needed."
                         }
                     }
                 }
@@ -77,7 +76,7 @@ pipeline {
     post {
         always {
             archiveArtifacts artifacts: 'results/**, html-report/**', allowEmptyArchive: true
-            echo "Build ${BUILD_NUMBER} complete - check HTML report!"
+            echo "Build ${BUILD_NUMBER} complete - view Demoblaze Performance Report above!"
         }
     }
 }
